--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
                             </div>
                             <div class="col-md-4">
                                 <p style="text-align: center;">
-                                    <br /><br /><br /><br />
+                                    <br />It is recommended that you use IAM credentials for a user with the [ReadOnlyAccess](https://console.aws.amazon.com/iam/home?#/policies/arn:aws:iam::aws:policy/ReadOnlyAccess) policy.<br /><br />
                                     <i>More authentication options coming soon!</i>
                                 </p>
                             </div>
