--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
                                         <a class="dropdown-item region-item" data-region="eu-west-3">EU (Paris)</a>
                                         <a class="dropdown-item region-item" data-region="eu-north-1">EU (Stockholm)</a>
                                         <a class="dropdown-item region-item" data-region="sa-east-1">South America (S&#227;o Paulo)</a>
+                                        <a class="dropdown-item region-item" data-region="us-gov-east-1">AWS GovCloud (US-East)</a>
+                                        <a class="dropdown-item region-item" data-region="us-gov-west-1">AWS GovCloud (US)</a>
                                     </div>
                                 </div>
                                 <div class="site-header-search-container">
