Add messaging about IAM policy

--- a/index.html
+++ b/index.html
@@ -871,8 +871,8 @@
                             </div>
                             <div class="col-md-4">
                                 <p style="text-align: center;">
-                                    <br /><br /><br /><br />
-                                    <i>More authentication options coming soon!</i>
+                                    <br /><br />
+                                    You will need an IAM key pair to authenticate your requests. It is recommended that you provide only read access with these credentials and suggest you assign the <a href="https://console.aws.amazon.com/iam/home?#/policies/arn:aws:iam::aws:policy/ReadOnlyAccess" target="_blank">ReadOnlyAccess</a> policy.
                                 </p>
                             </div>
                             <div class="col-md-1"></div>
