--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                         <li><a href="#section-outputs-troposphere"><span class="lbl">Troposphere</span></a></li>
                         <li><a href="#section-outputs-cdkts"><span class="lbl">CDK (TS)</span></a></li>
                         <!--<li><a href="#section-outputs-iam"><span class="lbl">IAM</span></a></li>-->
+                        <li><a href="#section-outputs-tfstate"><span class="lbl">Terraform State</span></a></li>
                         <li><a href="#section-outputs-raw"><span class="lbl">Raw Output (Debug)</span></a></li>
                     </ul>
                 </li>
@@ -490,6 +491,7 @@
                             <button id="header-button-copy-tf" type="button" class="f2-header-button btn btn-default-outline" style="display: none;"><i class="fa fa-files-o"></i>&nbsp;&nbsp;Copy</button>
                             <button id="header-button-copy-troposphere" type="button" class="f2-header-button btn btn-default-outline" style="display: none;"><i class="fa fa-files-o"></i>&nbsp;&nbsp;Copy</button>
                             <button id="header-button-copy-cdkts" type="button" class="f2-header-button btn btn-default-outline" style="display: none;"><i class="fa fa-files-o"></i>&nbsp;&nbsp;Copy</button>
+                            <button id="header-button-copy-tfstate" type="button" class="f2-header-button btn btn-default-outline" style="display: none;"><i class="fa fa-files-o"></i>&nbsp;&nbsp;Copy</button>
                             <button id="header-button-copy-raw" type="button" class="f2-header-button btn btn-default-outline" style="display: none;"><i class="fa fa-files-o"></i>&nbsp;&nbsp;Copy</button>
                         </div>
                     </div>
@@ -1039,6 +1041,12 @@
                         <i class="font-icon font-icon-inline font-icon-warning"></i>
                         <strong>Not Yet Ready</strong><br>
                         This feature is not yet ready (but I'm working on it!)
+                    </div>
+                </section>
+
+                <section id="section-outputs-tfstate" data-section-breadcrumb1-title="Outputs" data-section-breadcrumb1-link="#section-outputs-tfstate" data-section-title="Terraform State" class="former2-section" style="display: none;">
+                    <div id='tfstate_container'>
+                        <textarea id='tfstate'></textarea>
                     </div>
                 </section>
 
