Add Direct Connect section

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
                             <li><a href="#section-networkingandcontentdelivery-cloudfront"><span class="lbl">CloudFront</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-route53"><span class="lbl">Route 53</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-apigateway"><span class="lbl">API Gateway</span></a></li>
+                            <li><a href="#section-networkingandcontentdelivery-directconnect"><span class="lbl">Direct Connect</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-appmesh"><span class="lbl">App Mesh</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-cloudmap"><span class="lbl">Cloud Map</span></a></li>
                         </ul>
@@ -575,6 +576,7 @@
                                                     <a href="#section-networkingandcontentdelivery-cloudfront" style="font-weight: 600;">CloudFront</a><br />
                                                     <a href="#section-networkingandcontentdelivery-route53" style="font-weight: 600;">Route 53</a><br />
                                                     <a href="#section-networkingandcontentdelivery-apigateway" style="font-weight: 600;">API Gateway</a><br />
+                                                    <a href="#section-networkingandcontentdelivery-directconnect" style="font-weight: 600;">Direct Connect</a><br />
                                                     <a href="#section-networkingandcontentdelivery-appmesh" style="font-weight: 600;">App Mesh</a><br />
                                                     <a href="#section-networkingandcontentdelivery-cloudmap" style="font-weight: 600;">Cloud Map</a>
                                                 </td>
