--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
                             <li><a href="#section-applicationintegration-amazonmq"><span class="lbl">Amazon MQ</span></a></li>
                             <li><a href="#section-applicationintegration-sns"><span class="lbl">SNS</span></a></li>
                             <li><a href="#section-applicationintegration-sqs"><span class="lbl">SQS</span></a></li>
+                            <li><a href="#section-applicationintegration-swf"><span class="lbl">SWF</span></a></li>
                         </ul>
                     </li>
                     <li class="green with-sub" data-category="awscostmanagement">
@@ -721,7 +722,8 @@
                                                     <a href="#section-applicationintegration-stepfunctions" style="font-weight: 600;">Step Functions</a><br />
                                                     <a href="#section-applicationintegration-amazonmq" style="font-weight: 600;">Amazon MQ</a><br />
                                                     <a href="#section-applicationintegration-sns" style="font-weight: 600;">SNS</a><br />
-                                                    <a href="#section-applicationintegration-sqs" style="font-weight: 600;">SQS</a>
+                                                    <a href="#section-applicationintegration-sqs" style="font-weight: 600;">SQS</a><br />
+                                                    <a href="#section-applicationintegration-swf" style="font-weight: 600;">SWF</a>
                                                 </td>
                                             </tr>
                                         </table>
