Add Backup service resources

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
                             <li><a href="#section-storage-efs"><span class="lbl">EFS</span></a></li>
                             <li><a href="#section-storage-fsx"><span class="lbl">FSx</span></a></li>
                             <li><a href="#section-storage-glacier"><span class="lbl">Glacier</span></a></li>
+                            <li><a href="#section-storage-backup"><span class="lbl">Backup</span></a></li>
                         </ul>
                     </li>
                     <li class="blue with-sub" data-category="database">
@@ -532,7 +533,8 @@
                                                     <a href="#section-storage-s3" style="font-weight: 600;">S3</a><br />
                                                     <a href="#section-storage-efs" style="font-weight: 600;">EFS</a><br />
                                                     <a href="#section-storage-fsx" style="font-weight: 600;">FSx</a><br />
-                                                    <a href="#section-storage-glacier" style="font-weight: 600;">Glacier</a>
+                                                    <a href="#section-storage-glacier" style="font-weight: 600;">Glacier</a><br />
+                                                    <a href="#section-storage-backup" style="font-weight: 600;">Backup</a>
                                                 </td>
                                             </tr>
                                         </table>
