--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
                         </span>
                         <ul>
                             <li><a href="#section-migrationandtransfer-databasemigrationservice"><span class="lbl">Database Migration Service</span></a></li>
+                            <li><a href="#section-migrationandtransfer-transfer"><span class="lbl">Transfer</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub" data-category="networkingandcontentdelivery">
@@ -563,7 +564,8 @@
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
-                                                    <a href="#section-migrationandtransfer-databasemigrationservice" style="font-weight: 600;">Database Migration Service</a>
+                                                    <a href="#section-migrationandtransfer-databasemigrationservice" style="font-weight: 600;">Database Migration Service</a><br />
+                                                    <a href="#section-migrationandtransfer-transfer" style="font-weight: 600;">Transfer</a>
                                                 </td>
                                             </tr>
                                         </table>
