--- a/index.html
+++ b/index.html
@@ -418,6 +418,7 @@
                             <span class="lbl">Customer Engagement</span>
                         </span>
                         <ul>
+                            <li><a href="#section-customerengagement-pinpoint"><span class="lbl">Pinpoint</span></a></li>
                             <li><a href="#section-customerengagement-ses"><span class="lbl">SES</span></a></li>
                         </ul>
                     </li>
@@ -751,6 +752,7 @@
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
+                                                    <a href="#section-customerengagement-pinpoint" style="font-weight: 600;">Pinpoint</a><br />
                                                     <a href="#section-customerengagement-ses" style="font-weight: 600;">SES</a>
                                                 </td>
                                             </tr>
