Add License Manager resources

--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
                             <li><a href="#section-managementandgovernance-opsworks"><span class="lbl">OpsWorks</span></a></li>
                             <li><a href="#section-managementandgovernance-servicecatalog"><span class="lbl">Service Catalog</span></a></li>
                             <li><a href="#section-managementandgovernance-systemsmanager"><span class="lbl">Systems Manager</span></a></li>
+                            <li><a href="#section-managementandgovernance-licensemanager"><span class="lbl">License Manager</span></a></li>
                         </ul>
                     </li>
                     <li class="gold with-sub" data-category="mediaservices">
@@ -632,7 +633,8 @@
                                                     <a href="#section-managementandgovernance-config" style="font-weight: 600;">Config</a><br />
                                                     <a href="#section-managementandgovernance-opsworks" style="font-weight: 600;">OpsWorks</a><br />
                                                     <a href="#section-managementandgovernance-servicecatalog" style="font-weight: 600;">Service Catalog</a><br />
-                                                    <a href="#section-managementandgovernance-systemsmanager" style="font-weight: 600;">Systems Manager</a>
+                                                    <a href="#section-managementandgovernance-systemsmanager" style="font-weight: 600;">Systems Manager</a><br />
+                                                    <a href="#section-managementandgovernance-licensemanager" style="font-weight: 600;">License Manager</a>
                                                 </td>
                                             </tr>
                                         </table>
