Add Global Accelerator resources

--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
                             <li><a href="#section-networkingandcontentdelivery-directconnect"><span class="lbl">Direct Connect</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-appmesh"><span class="lbl">App Mesh</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-cloudmap"><span class="lbl">Cloud Map</span></a></li>
+                            <li><a href="#section-networkingandcontentdelivery-globalaccelerator"><span class="lbl">Global Accelerator</span></a></li>
                         </ul>
                     </li>
                     <li class="blue with-sub" data-category="developertools">
@@ -585,7 +586,8 @@
                                                     <a href="#section-networkingandcontentdelivery-apigateway" style="font-weight: 600;">API Gateway</a><br />
                                                     <a href="#section-networkingandcontentdelivery-directconnect" style="font-weight: 600;">Direct Connect</a><br />
                                                     <a href="#section-networkingandcontentdelivery-appmesh" style="font-weight: 600;">App Mesh</a><br />
-                                                    <a href="#section-networkingandcontentdelivery-cloudmap" style="font-weight: 600;">Cloud Map</a>
+                                                    <a href="#section-networkingandcontentdelivery-cloudmap" style="font-weight: 600;">Cloud Map</a><br />
+                                                    <a href="#section-networkingandcontentdelivery-globalaccelerator" style="font-weight: 600;">Global Accelerator</a>
                                                 </td>
                                             </tr>
                                         </table>
