New resources partial coverage

--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
                             <li><a href="#section-internetofthings-1click"><span class="lbl">1-Click</span></a></li>
                             <li><a href="#section-internetofthings-analytics"><span class="lbl">Analytics</span></a></li>
                             <li><a href="#section-internetofthings-greengrass"><span class="lbl">Greengrass</span></a></li>
+                            <li><a href="#section-internetofthings-thingsgraph"><span class="lbl">Things Graph</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub" data-category="gamedevelopment">
@@ -785,7 +786,8 @@
                                                     <a href="#section-internetofthings-core" style="font-weight: 600;">Core</a><br />
                                                     <a href="#section-internetofthings-1click" style="font-weight: 600;">1-Click</a><br />
                                                     <a href="#section-internetofthings-analytics" style="font-weight: 600;">Analytics</a><br />
-                                                    <a href="#section-internetofthings-greengrass" style="font-weight: 600;">Greengrass</a>
+                                                    <a href="#section-internetofthings-greengrass" style="font-weight: 600;">Greengrass</a><br />
+                                                    <a href="#section-internetofthings-thingsgraph" style="font-weight: 600;">Things Graph</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1083,7 +1085,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="aws-sdk-2.449.0.min.js"></script>
+        <script src="aws-sdk-2.467.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/mappings.js"></script>
