--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
                             <span class="lbl">Management &amp; Governance</span>
                         </span>
                         <ul>
+                            <li><a href="#section-managementandgovernance-organizations"><span class="lbl">Organizations</span></a></li>
                             <li><a href="#section-managementandgovernance-cloudwatch"><span class="lbl">CloudWatch</span></a></li>
                             <li><a href="#section-managementandgovernance-autoscaling"><span class="lbl">Auto Scaling</span></a></li>
                             <li><a href="#section-managementandgovernance-cloudtrail"><span class="lbl">CloudTrail</span></a></li>
@@ -630,6 +631,7 @@
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
+                                                    <a href="#section-managementandgovernance-organizations" style="font-weight: 600;">Organizations</a><br />
                                                     <a href="#section-managementandgovernance-cloudwatch" style="font-weight: 600;">CloudWatch</a><br />
                                                     <a href="#section-managementandgovernance-autoscaling" style="font-weight: 600;">Auto Scaling</a><br />
                                                     <a href="#section-managementandgovernance-cloudtrail" style="font-weight: 600;">CloudTrail</a><br />
