Add Amplify and MSK CFN resources

--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
                             <li><a href="#section-analytics-kinesis"><span class="lbl">Kinesis</span></a></li>
                             <li><a href="#section-analytics-datapipeline"><span class="lbl">Data Pipeline</span></a></li>
                             <li><a href="#section-analytics-glue"><span class="lbl">Glue</span></a></li>
+                            <li><a href="#section-analytics-msk"><span class="lbl">MSK</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub" data-category="securityidentityandcompliance">
@@ -389,6 +390,7 @@
                             <span class="lbl">Mobile</span>
                         </span>
                         <ul>
+                            <li><a href="#section-mobile-amplify"><span class="lbl">Amplify</span></a></li>
                             <li><a href="#section-mobile-appsync"><span class="lbl">AppSync</span></a></li>
                             <li><a href="#section-mobile-devicefarm"><span class="lbl">Device Farm</span></a></li>
                         </ul>
@@ -682,7 +684,8 @@
                                                     <a href="#section-analytics-elasticsearch" style="font-weight: 600;">Elasticsearch</a><br />
                                                     <a href="#section-analytics-kinesis" style="font-weight: 600;">Kinesis</a><br />
                                                     <a href="#section-analytics-datapipeline" style="font-weight: 600;">Data Pipeline</a><br />
-                                                    <a href="#section-analytics-glue" style="font-weight: 600;">Glue</a>
+                                                    <a href="#section-analytics-glue" style="font-weight: 600;">Glue</a><br />
+                                                    <a href="#section-analytics-msk" style="font-weight: 600;">MSK</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -718,6 +721,7 @@
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
+                                                    <a href="#section-mobile-amplify" style="font-weight: 600;">Amplify</a><br />
                                                     <a href="#section-mobile-appsync" style="font-weight: 600;">AppSync</a><br />
                                                     <a href="#section-mobile-devicefarm" style="font-weight: 600;">Device Farm</a>
                                                 </td>
