--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
                             <li><a href="#section-securityidentityandcompliance-secretsmanager"><span class="lbl">Secrets Manager</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-guardduty"><span class="lbl">GuardDuty</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-inspector"><span class="lbl">Inspector</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-macie"><span class="lbl">Macie</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-certificatemanager"><span class="lbl">Certificate Manager</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-kms"><span class="lbl">KMS</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-cloudhsm"><span class="lbl">CloudHSM</span></a></li>
@@ -703,6 +704,7 @@
                                                     <a href="#section-securityidentityandcompliance-secretsmanager" style="font-weight: 600;">Secrets Manager</a><br />
                                                     <a href="#section-securityidentityandcompliance-guardduty" style="font-weight: 600;">GuardDuty</a><br />
                                                     <a href="#section-securityidentityandcompliance-inspector" style="font-weight: 600;">Inspector</a><br />
+                                                    <a href="#section-securityidentityandcompliance-macie" style="font-weight: 600;">Macie</a><br />
                                                     <a href="#section-securityidentityandcompliance-certificatemanager" style="font-weight: 600;">Certificate Manager</a><br />
                                                     <a href="#section-securityidentityandcompliance-kms" style="font-weight: 600;">KMS</a><br />
                                                     <a href="#section-securityidentityandcompliance-cloudhsm" style="font-weight: 600;">CloudHSM</a><br />
