--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
                             <li><a href="#section-securityidentityandcompliance-cloudhsm"><span class="lbl">CloudHSM</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-directoryservice"><span class="lbl">Directory Service</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-wafandshield"><span class="lbl">WAF &amp; Shield</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-securityhub"><span class="lbl">Security Hub</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub" data-category="mobile">
@@ -709,7 +710,8 @@
                                                     <a href="#section-securityidentityandcompliance-kms" style="font-weight: 600;">KMS</a><br />
                                                     <a href="#section-securityidentityandcompliance-cloudhsm" style="font-weight: 600;">CloudHSM</a><br />
                                                     <a href="#section-securityidentityandcompliance-directoryservice" style="font-weight: 600;">Directory Service</a><br />
-                                                    <a href="#section-securityidentityandcompliance-wafandshield" style="font-weight: 600;">WAF &amp; Shield</a>
+                                                    <a href="#section-securityidentityandcompliance-wafandshield" style="font-weight: 600;">WAF &amp; Shield</a><br />
+                                                    <a href="#section-securityidentityandcompliance-securityhub" style="font-weight: 600;">Security Hub</a>
                                                 </td>
                                             </tr>
                                         </table>
