Add MediaLive resources

--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
                         </span>
                         <ul>
                             <li><a href="#section-mediaservices-elastictranscoder"><span class="lbl">Elastic Transcoder</span></a></li>
+                            <li><a href="#section-mediaservices-medialive"><span class="lbl">MediaLive</span></a></li>
                             <li><a href="#section-mediaservices-mediapackage"><span class="lbl">MediaPackage</span></a></li>
                             <li><a href="#section-mediaservices-mediastore"><span class="lbl">MediaStore</span></a></li>
                         </ul>
@@ -656,8 +657,9 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-mediaservices-elastictranscoder" style="font-weight: 600;">Elastic Transcoder</a><br />
+                                                    <a href="#section-mediaservices-medialive" style="font-weight: 600;">MediaLive</a><br />
                                                     <a href="#section-mediaservices-mediapackage" style="font-weight: 600;">MediaPackage</a><br />
-                                                    <a href="#section-mediaservices-mediastore" style="font-weight: 600;">MediaStore</a><br />
+                                                    <a href="#section-mediaservices-mediastore" style="font-weight: 600;">MediaStore</a>
                                                 </td>
                                             </tr>
                                         </table>
