Add EventBridge and WorkLink

--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
                         </span>
                         <ul>
                             <li><a href="#section-applicationintegration-stepfunctions"><span class="lbl">Step Functions</span></a></li>
+                            <li><a href="#section-applicationintegration-eventbridge"><span class="lbl">EventBridge</span></a></li>
                             <li><a href="#section-applicationintegration-amazonmq"><span class="lbl">Amazon MQ</span></a></li>
                             <li><a href="#section-applicationintegration-sns"><span class="lbl">SNS</span></a></li>
                             <li><a href="#section-applicationintegration-sqs"><span class="lbl">SQS</span></a></li>
@@ -438,6 +439,7 @@
                         <ul>
                             <li><a href="#section-endusercomputing-workspaces"><span class="lbl">WorkSpaces</span></a></li>
                             <li><a href="#section-endusercomputing-appstream"><span class="lbl">AppStream</span></a></li>
+                            <li><a href="#section-endusercomputing-worklink"><span class="lbl">WorkLink</span></a></li>
                         </ul>
                     </li>
                     <li class="green with-sub" data-category="internetofthings">
@@ -742,6 +744,7 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-applicationintegration-stepfunctions" style="font-weight: 600;">Step Functions</a><br />
+                                                    <a href="#section-applicationintegration-eventbridge" style="font-weight: 600;">EventBridge</a><br />
                                                     <a href="#section-applicationintegration-amazonmq" style="font-weight: 600;">Amazon MQ</a><br />
                                                     <a href="#section-applicationintegration-sns" style="font-weight: 600;">SNS</a><br />
                                                     <a href="#section-applicationintegration-sqs" style="font-weight: 600;">SQS</a><br />
@@ -783,7 +786,8 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-endusercomputing-workspaces" style="font-weight: 600;">WorkSpaces</a><br />
-                                                    <a href="#section-endusercomputing-appstream" style="font-weight: 600;">AppStream</a>
+                                                    <a href="#section-endusercomputing-appstream" style="font-weight: 600;">AppStream</a><br />
+                                                    <a href="#section-endusercomputing-worklink" style="font-weight: 600;">WorkLink</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1097,7 +1101,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="aws-sdk-2.467.0.min.js"></script>
+        <script src="aws-sdk-2.493.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/mappings.js"></script>
