Add AWS::IoTEvents::DetectorModel and AWS::IoTEvents::Input

--- a/index.html
+++ b/index.html
@@ -451,6 +451,7 @@
                             <li><a href="#section-internetofthings-core"><span class="lbl">Core</span></a></li>
                             <li><a href="#section-internetofthings-1click"><span class="lbl">1-Click</span></a></li>
                             <li><a href="#section-internetofthings-analytics"><span class="lbl">Analytics</span></a></li>
+                            <li><a href="#section-internetofthings-events"><span class="lbl">Events</span></a></li>
                             <li><a href="#section-internetofthings-greengrass"><span class="lbl">Greengrass</span></a></li>
                             <li><a href="#section-internetofthings-thingsgraph"><span class="lbl">Things Graph</span></a></li>
                         </ul>
@@ -802,6 +803,7 @@
                                                     <a href="#section-internetofthings-core" style="font-weight: 600;">Core</a><br />
                                                     <a href="#section-internetofthings-1click" style="font-weight: 600;">1-Click</a><br />
                                                     <a href="#section-internetofthings-analytics" style="font-weight: 600;">Analytics</a><br />
+                                                    <a href="#section-internetofthings-events" style="font-weight: 600;">Events</a><br />
                                                     <a href="#section-internetofthings-greengrass" style="font-weight: 600;">Greengrass</a><br />
                                                     <a href="#section-internetofthings-thingsgraph" style="font-weight: 600;">Things Graph</a>
                                                 </td>
