--- a/index.html
+++ b/index.html
@@ -465,6 +465,15 @@
                             <li><a href="#section-gamedevelopment-gamelift"><span class="lbl">GameLift</span></a></li>
                         </ul>
                     </li>
+                    <li class="grey with-sub" data-category="other">
+                        <span>
+                            <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/General_light-bg.png" style="width: 16px; height: 16px;" /></i>
+                            <span class="lbl">Other</span>
+                        </span>
+                        <ul>
+                            <li><a href="#section-other-servicequotas"><span class="lbl">Service Quotas</span></a></li>
+                        </ul>
+                    </li>
                 </ul>
             </section>
         </nav>
@@ -818,6 +827,18 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-gamedevelopment-gamelift" style="font-weight: 600;">GameLift</a>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <table style="border: none; margin-bottom: 16px;">
+                                            <tr>
+                                                <td><img src="img/aws/General_light-bg.png" style="width: 48px; height: 48px;" /></td>
+                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Other</h4></td>
+                                            </tr>
+                                            <tr>
+                                                <td>&nbsp;</td>
+                                                <td style="padding-left: 12px;">
+                                                    <a href="#section-other-servicequotas" style="font-weight: 600;">Service Quotas</a>
                                                 </td>
                                             </tr>
                                         </table>
