--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
                             <li><a href="#section-analytics-emr"><span class="lbl">EMR</span></a></li>
                             <li><a href="#section-analytics-elasticsearch"><span class="lbl">Elasticsearch</span></a></li>
                             <li><a href="#section-analytics-kinesis"><span class="lbl">Kinesis</span></a></li>
+                            <li><a href="#section-analytics-quicksight"><span class="lbl">QuickSight</span></a></li>
                             <li><a href="#section-analytics-datapipeline"><span class="lbl">Data Pipeline</span></a></li>
                             <li><a href="#section-analytics-glue"><span class="lbl">Glue</span></a></li>
                             <li><a href="#section-analytics-msk"><span class="lbl">MSK</span></a></li>
@@ -699,6 +700,7 @@
                                                     <a href="#section-analytics-emr" style="font-weight: 600;">EMR</a><br />
                                                     <a href="#section-analytics-elasticsearch" style="font-weight: 600;">Elasticsearch</a><br />
                                                     <a href="#section-analytics-kinesis" style="font-weight: 600;">Kinesis</a><br />
+                                                    <a href="#section-analytics-quicksight" style="font-weight: 600;">QuickSight</a><br />
                                                     <a href="#section-analytics-datapipeline" style="font-weight: 600;">Data Pipeline</a><br />
                                                     <a href="#section-analytics-glue" style="font-weight: 600;">Glue</a><br />
                                                     <a href="#section-analytics-msk" style="font-weight: 600;">MSK</a>
