--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
                             <li><a href="#section-developertools-codedeploy"><span class="lbl">CodeDeploy</span></a></li>
                             <li><a href="#section-developertools-codepipeline"><span class="lbl">CodePipeline</span></a></li>
                             <li><a href="#section-developertools-cloud9"><span class="lbl">Cloud9</span></a></li>
+                            <li><a href="#section-developertools-xray"><span class="lbl">X-Ray</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub" data-category="robotics">
@@ -623,7 +624,8 @@
                                                     <a href="#section-developertools-codebuild" style="font-weight: 600;">CodeBuild</a><br />
                                                     <a href="#section-developertools-codedeploy" style="font-weight: 600;">CodeDeploy</a><br />
                                                     <a href="#section-developertools-codepipeline" style="font-weight: 600;">CodePipeline</a><br />
-                                                    <a href="#section-developertools-cloud9" style="font-weight: 600;">Cloud9</a>
+                                                    <a href="#section-developertools-cloud9" style="font-weight: 600;">Cloud9</a><br />
+                                                    <a href="#section-developertools-xray" style="font-weight: 600;">X-Ray</a>
                                                 </td>
                                             </tr>
                                         </table>
