--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                                         <a class="dropdown-item region-item" data-region="us-west-2">US West (Oregon)</a>
                                         <a class="dropdown-item region-item" data-region="ap-east-1">Asia Pacific (Hong Kong)</a>
                                         <a class="dropdown-item region-item" data-region="ap-south-1">Asia Pacific (Mumbai)</a>
+                                        <a class="dropdown-item region-item" data-region="ap-northeast-3">Asia Pacific (Osaka-Local)</a>
                                         <a class="dropdown-item region-item" data-region="ap-northeast-2">Asia Pacific (Seoul)</a>
                                         <a class="dropdown-item region-item" data-region="ap-southeast-1">Asia Pacific (Singapore)</a>
                                         <a class="dropdown-item region-item" data-region="ap-southeast-2">Asia Pacific (Sydney)</a>
@@ -158,8 +159,8 @@
                                         <a class="dropdown-item region-item" data-region="eu-west-3">EU (Paris)</a>
                                         <a class="dropdown-item region-item" data-region="eu-north-1">EU (Stockholm)</a>
                                         <a class="dropdown-item region-item" data-region="sa-east-1">South America (S&#227;o Paulo)</a>
-                                        <a class="dropdown-item region-item" data-region="us-gov-east-1">AWS GovCloud (US-East)</a>
-                                        <a class="dropdown-item region-item" data-region="us-gov-west-1">AWS GovCloud (US)</a>
+                                        <a class="dropdown-item region-item" data-region="us-gov-east-1">AWS GovCloud (US-Gov-East)</a>
+                                        <a class="dropdown-item region-item" data-region="us-gov-west-1">AWS GovCloud (US-Gov-West)</a>
                                     </div>
                                 </div>
                                 <div class="site-header-search-container">
