All regions attempt

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                                 <div class="dropdown" style="float: right;">
                                     <button class="btn btn-rounded btn-inline btn-secondary dropdown-toggle" id="selected-region" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">&nbsp;&nbsp;</button>
                                     <div class="dropdown-menu" aria-labelledby="selected-region">
+                                        <a class="dropdown-item region-item" data-region="all">All Regions</a>
                                         <a class="dropdown-item region-item" data-region="us-east-1">US East (N. Virginia)</a>
                                         <a class="dropdown-item region-item" data-region="us-east-2">US East (Ohio)</a>
                                         <a class="dropdown-item region-item" data-region="us-west-1">US West (N. California)</a>
