Add Bahrain region

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                                         <a class="dropdown-item region-item" data-region="eu-west-2">EU (London)</a>
                                         <a class="dropdown-item region-item" data-region="eu-west-3">EU (Paris)</a>
                                         <a class="dropdown-item region-item" data-region="eu-north-1">EU (Stockholm)</a>
+                                        <a class="dropdown-item region-item" data-region="me-south-1">Middle East (Bahrain)</a>
                                         <a class="dropdown-item region-item" data-region="sa-east-1">South America (S&#227;o Paulo)</a>
                                         <a class="dropdown-item region-item" data-region="us-gov-east-1">AWS GovCloud (US-Gov-East)</a>
                                         <a class="dropdown-item region-item" data-region="us-gov-west-1">AWS GovCloud (US-Gov-West)</a>
