Add Lightsail resources

--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                         </span>
                         <ul>
                             <li><a href="#section-compute-ec2"><span class="lbl">EC2</span></a></li>
+                            <li><a href="#section-compute-lightsail"><span class="lbl">Lightsail</span></a></li>
                             <li><a href="#section-compute-ecr"><span class="lbl">ECR</span></a></li>
                             <li><a href="#section-compute-ecs"><span class="lbl">ECS</span></a></li>
                             <li><a href="#section-compute-eks"><span class="lbl">EKS</span></a></li>
@@ -540,6 +541,7 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-compute-ec2" style="font-weight: 600;">EC2</a><br />
+                                                    <a href="#section-compute-lightsail" style="font-weight: 600;">Lightsail</a><br />
                                                     <a href="#section-compute-ecr" style="font-weight: 600;">ECR</a><br />
                                                     <a href="#section-compute-ecs" style="font-weight: 600;">ECS</a><br />
                                                     <a href="#section-compute-eks" style="font-weight: 600;">EKS</a><br />
