--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
                             <span class="lbl">Developer Tools</span>
                         </span>
                         <ul>
+                            <li><a href="#section-developertools-codestar"><span class="lbl">CodeStar</span></a></li>
                             <li><a href="#section-developertools-codecommit"><span class="lbl">CodeCommit</span></a></li>
                             <li><a href="#section-developertools-codebuild"><span class="lbl">CodeBuild</span></a></li>
                             <li><a href="#section-developertools-codedeploy"><span class="lbl">CodeDeploy</span></a></li>
@@ -624,6 +625,7 @@
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
+                                                    <a href="#section-developertools-codestar" style="font-weight: 600;">CodeStar</a><br />
                                                     <a href="#section-developertools-codecommit" style="font-weight: 600;">CodeCommit</a><br />
                                                     <a href="#section-developertools-codebuild" style="font-weight: 600;">CodeBuild</a><br />
                                                     <a href="#section-developertools-codedeploy" style="font-weight: 600;">CodeDeploy</a><br />
